converted to typescript, need to figure out how to execute

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             </div>
         </div>
     </body>
-    <foot>
-        <script src="main.js"></script>
+    <foot onload="load()">
+        <!-- <script src="main.js"></script> -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.13/system.js"></script>
+        <script src="out/main.js"></script>
     </foot>
 </html>
