committing typescript files

--- a/index.html
+++ b/index.html
@@ -49,9 +49,17 @@
             </div>
         </div>
     </body>
-    <foot onload="load()">
+    <foot>
         <!-- <script src="main.js"></script> -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.13/system.js"></script>
-        <script src="out/main.js"></script>
+        <!-- <script src="out/PrototypeCanvas.js"></script> -->
+        <script src="PrototypeCanvas.ts"></script>
+        <script>
+            // window.addEventListener('load', function() {
+            //     System.import('out/PrototypeCanvas.ts').then(function(){
+            //         var prototypeCanvas = new PrototypeCanvas();
+            //     });
+            // });
+        </script>
     </foot>
 </html>
