properly bundling typescript

--- a/index.html
+++ b/index.html
@@ -52,14 +52,10 @@
     <foot>
         <!-- <script src="main.js"></script> -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.13/system.js"></script>
-        <!-- <script src="out/PrototypeCanvas.js"></script> -->
-        <script src="PrototypeCanvas.ts"></script>
         <script>
-            // window.addEventListener('load', function() {
-            //     System.import('out/PrototypeCanvas.ts').then(function(){
-            //         var prototypeCanvas = new PrototypeCanvas();
-            //     });
-            // });
+            System.import('./bundle.js')
+                .then(() => System.import('main'))
+                .catch(console.error.bind(console))
         </script>
     </foot>
 </html>
