--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
     <head>
         <style>
             html, body {
-                width:100vh;
+                width:100vw;
                 height:100vh;
+                margin:0px;
                 overflow:hidden;
             }
             body {
                 background:#d9d9d9;
             }
             canvas {
-                width: 80vh;
-                height: 80vh;
+                width: 100vw;
+                height: 100vh;
                 background: #e6e6e6;
                 border: 1px solid black;
             }
@@ -21,7 +22,10 @@
             }
 
             #CanvasControls {
-                width: 80vh;
+                z-index: 10;
+                position:absolute;
+                top:10px;
+                right:10px;
             }
             #InfoDisplay {
                 display:inline-block;
