basic rabbitmq receiver

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         </div>
     </body>
     <foot>
+        <script type="text/javascript" src="stomp.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.20.13/system.js"></script>
         <script>
             System.import('./bundle.js')
