- adding block tool selection

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <button id="RectangleToolOption" class="tool-selection">R</button>
             <button id="LineToolOption" class="tool-selection">L</button>
             <button id="TextToolOption" class="tool-selection">T</button>
+            <button id="BlockToolOption" class="tool-selection">B</button>
         </div>
     </body>
     <foot>
